# tugas-magang-ros-1-yuan

./: README.md
Student_Data_System/src/custom_msg/: CMakeLists.txt  package.xml
Student_Data_System/src/custom_msg/msg/: dataDiri.msg
Student_Data_System/src/manajemen/: CMakeLists.txt  package.xml
Student_Data_System/src/manajemen/src/: controll.cpp  ekspor_node.cpp  impor_node.cpp  irt_node.cpp  main_node.cpp
